# dead_simple_db

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: api.rs  db.rs  error.rs  lib.rs  main.rs
tests/: api_integration.rs  cli_integration.rs
