[package]
name = "dead_simple_db"
version = "0.1.0"
edition = "2021" # Use 2021 edition

[dependencies]
axum = "0.7.5"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
crc = "3.2.1"
# Ensure serde derive feature is enabled (it was already)
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
tower = "0.4.13" # Keep as is for now, address tower 0.5 separately if needed
bincode = "1.3.3"
once_cell = "1.19.0"
nix = "0.29.0"
# --- Add config crate ---
config = { version = "0.14", features = ["toml"] } # Add config with TOML support

[dev-dependencies]
tempfile = "3.10.1"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
assert_cmd = "2.0.14"
predicates = "3.1.0"
nix = { version = "0.29.0", features = ["signal"] }

# tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }